N°3649 - Activity panel: Move case log entry form above toolbar's actions

--- a/css/backoffice/layout/_all.scss
+++ b/css/backoffice/layout/_all.scss
@@ -32,4 +32,4 @@
 @import "activity-panel/edits-entry";
 @import "activity-panel/transition-entry";
 @import "activity-panel/caselog-entry-form";
-@import "blocks-integrations/panel-with-tab-container";
+@import "blocks-integrations/all";
