--- a/templates/base/layouts/activity-panel/caselog-entry-form/layout.html.twig
+++ b/templates/base/layouts/activity-panel/caselog-entry-form/layout.html.twig
@@ -6,20 +6,21 @@
       data-attribute-code="{{ oUIBlock.GetAttCode() }}"
       data-submit-mode="{{ oUIBlock.GetSubmitMode() }}"
       method="post">
-	<div class="ibo-caselog-entry-form--text-input" data-role="ibo-caselog-entry-form--text-input">
-		{{ render_block(oUIBlock.GetTextInput(), {aPage: aPage}) }}
-	</div>
-	<div class="ibo-caselog-entry-form--actions">
-		<div class="ibo-caselog-entry-form--action-buttons--extra-actions" data-role="ibo-caselog-entry-form--action-buttons--extra-actions">
-			{% for TextInputActionButton in oUIBlock.GetExtraActionButtons() %}
-				{{ render_block(TextInputActionButton, {aPage: aPage}) }}
-			{% endfor %}
-		</div>
-		<div class="ibo-caselog-entry-form--action-buttons--main-actions" data-role="ibo-caselog-entry-form--action-buttons--main-actions">
-			{% for FormActionButton in oUIBlock.GetMainActionButtons() %}
-				{{ render_block(FormActionButton, {aPage: aPage}) }}
-			{% endfor %}
-			{{ render_block(oUIBlock.GetSendButtonPopoverMenu(), {aPage: aPage}) }}
-		</div>
-	</div>
+    <div class="ibo-caselog-entry-form--actions">
+        <div class="ibo-caselog-entry-form--action-buttons--extra-actions"
+             data-role="ibo-caselog-entry-form--action-buttons--extra-actions">
+            {% for TextInputActionButton in oUIBlock.GetExtraActionButtons() %}
+                {{ render_block(TextInputActionButton, {aPage: aPage}) }}
+            {% endfor %}
+        </div>
+        <div class="ibo-caselog-entry-form--action-buttons--main-actions" data-role="ibo-caselog-entry-form--action-buttons--main-actions">
+            {% for FormActionButton in oUIBlock.GetMainActionButtons() %}
+                {{ render_block(FormActionButton, {aPage: aPage}) }}
+            {% endfor %}
+            {{ render_block(oUIBlock.GetSendButtonPopoverMenu(), {aPage: aPage}) }}
+        </div>
+    </div>
+    <div class="ibo-caselog-entry-form--text-input" data-role="ibo-caselog-entry-form--text-input">
+        {{ render_block(oUIBlock.GetTextInput(), {aPage: aPage}) }}
+    </div>
 </form>
