--- a/css/setup.scss
+++ b/css/setup.scss
@@ -468,4 +468,8 @@ body {
   }
 }
 
+.ibo-setup-summary-title {
+  font-size: $ibo-font-size-150;
+}
+
 /* integrityCheck: end (do not remove/edit) */
