--- a/templates/base/components/dashlet/dashletbadge.html.twig
+++ b/templates/base/components/dashlet/dashletbadge.html.twig
@@ -1,12 +1,13 @@
 {# @copyright   Copyright (C) 2010-2020 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
-    <div class="ibo-dashlet-badge--body{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}" id="{{ oUIBlock.GetId() }}">
+    <div class="ibo-dashlet-badge--body{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}" id="{{ oUIBlock.GetId() }}"
+         data-role="ibo-dashlet-badge--body">
         <div class="ibo-dashlet-badge--icon-container">
             <img class="ibo-dashlet-badge--icon" src="{{ oUIBlock.GetClassIconUrl() }}">
         </div>
         <div class="ibo-dashlet-badge--actions">
-            <a class="ibo-dashlet-badge--action-list" href="{{ oUIBlock.GetHyperlink() }}">
+            <a class="ibo-dashlet-badge--action-list" href="{{ oUIBlock.GetHyperlink() }}" data-role="ibo-dashlet-badge--action-list">
                 <span class="ibo-dashlet-badge--action-list-count">{{ oUIBlock.GetCount() }}</span>
                 <span class="ibo-dashlet-badge--action-list-label">{{ oUIBlock.GetClassLabel() }}</span>
             </a>
