Add Toolbar factory, Use new factory entry for cancel buttons, better check of twig errors, fix fatal error page

--- a/css/backoffice/components/_all.scss
+++ b/css/backoffice/components/_all.scss
@@ -25,6 +25,7 @@
 @import "fieldset";
 @import "field";
 @import "toolbar";
+@import "toolbar-spacer";
 @import "richtext";
 @import "formtable";
 @import "formtablerow";
