--- a/css/backoffice/components/_toolbar.scss
+++ b/css/backoffice/components/_toolbar.scss
@@ -3,6 +3,24 @@
  * license     http://opensource.org/licenses/AGPL-3.0
  */
 
-.ibo-action-toolbar {
-  position: relative;
+$ibo-toolbar--button-margin-top: 16px !default;
+$ibo-toolbar--margin: 6px 0 !default;
+
+.ibo-toolbar {
+  margin: $ibo-toolbar--margin;
+
+  &.ibo-toolbar--action {
+    position: relative;
+  }
+
+  &.ibo-toolbar--button {
+    @extend %ibo-vertically-centered-content;
+    margin-top: $ibo-toolbar--button-margin-top;
+  }
+
+  &.ibo-toolbar-top{
+    padding-left: calc(90px + 64px);
+    text-align: right;
+  }
 }
+
