--- a/templates/base/components/input/file-select/layout.js.twig
+++ b/templates/base/components/input/file-select/layout.js.twig
@@ -1,7 +1,8 @@
 {# @copyright   Copyright (C) 2010-2021 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
-
-$('#{{ oUIBlock.GetId() }}').bind('change', function() {
-    var fileName = $(this).val().replace(/^.*[\\\/]/, '');
-    $('#{{ oUIBlock.GetId() }}-file-name').html(fileName);
-});
+{% if oUIBlock.GetShowFilename() == true %}
+    $('#{{ oUIBlock.GetId() }}').bind('change', function() {
+        var fileName = $(this).val().replace(/^.*[\\\/]/, '');
+        $('#{{ oUIBlock.GetId() }}-file-name').html(fileName);
+    });
+{%  endif %}
