--- a/templates/pages/backoffice/ajaxpage/layout.html.twig
+++ b/templates/pages/backoffice/ajaxpage/layout.html.twig
@@ -22,7 +22,7 @@
 	{% endblock %}
 
 	{% if aPage.aJsFiles is not empty %}
-        {% set sId = oUIBlock.GetId() | sanitize_variable_name %}
+        {% set sId = oUIBlock.GetId() | sanitize(constant('utils::ENUM_SANITIZATION_FILTER_VARIABLE_NAME')) %}
         {% block iboPageJsFiles %}
             <script type="text/javascript">
             var aFilesToLoad{{ sId }} = [];
