Fix not showing filename next to upload buttons

--- a/templates/base/components/input/file-select/layout.html.twig
+++ b/templates/base/components/input/file-select/layout.html.twig
@@ -9,9 +9,11 @@
             <span class="ibo-button ibo-is-regular ibo-is-primary">
                 {{ oUIBlock.GetButtonText() }}
             </span>
+            {% if oUIBlock.GetShowFilename() %}
             <span id="{{ oUIBlock.GetId() }}-file-name" class="ibo-input-file-select--file-name">
                 {{ oUIBlock.GetFileName() }}
             </span>
+            {% endif %}
         </label>
     </div>
 {% endapply %}
