--- a/templates/base/components/input/file-select/layout.js.twig
+++ b/templates/base/components/input/file-select/layout.js.twig
@@ -1,6 +1,6 @@
 {# @copyright   Copyright (C) 2010-2021 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
-{% if oUIBlock.GetShowFilename() == true %}
+{% if oUIBlock.GetShowFilename() %}
     $('#{{ oUIBlock.GetId() }}').bind('change', function() {
         var fileName = $(this).val().replace(/^.*[\\\/]/, '');
         $('#{{ oUIBlock.GetId() }}-file-name').html(fileName);
