--- a/templates/application/display-block/block-chart-ajax-pie/layout.js.twig
+++ b/templates/application/display-block/block-chart-ajax-pie/layout.js.twig
@@ -31,9 +31,9 @@ if (typeof(charts) === "undefined")
 }
 var idxChart=charts.length;
 charts.push(chart);
-var refreshChart{{ oUIBlock.sId|variable_name }}='	$.post("{{ oUIBlock.sURLForRefresh|raw }}&refresh='+idxChart+'","", function (data) {'+
+var refreshChart{{ oUIBlock.sId|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_VARIABLE_NAME')) }}='	$.post("{{ oUIBlock.sURLForRefresh|raw }}&refresh='+idxChart+'","", function (data) {'+
 															'charts['+idxChart+'].unload();'+
 															'setTimeout(function () {eval(data.js);},50);'+
 														'});';
 
-refreshChart.push(refreshChart{{ oUIBlock.sId|variable_name }});
+refreshChart.push(refreshChart{{ oUIBlock.sId|sanitize(constant('utils::ENUM_SANITIZATION_FILTER_VARIABLE_NAME')) }});
